html file creation and finished structure of index.html

--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
 </head>
 
 <body>
+    <header>
+        <h1>Anahi's Website</h1>
+    </header>
+
     <main>
         <section>
-
+            <ul>
+                <li><a href="tracker.html">Personal Tracker</a></li>
+                <li><a href="Album.html">Photo Album</a></li>
+                <li><a href="ChristmasGift.html">Gift</a></li>
+            </ul>
         </section>
 
-        <section>
-
-        </section>
+        <p>Hola Anita ahorita, te cree esto porque te quiero, y para practicar mis cositas aqui jeje. Hasta ahora lo que sirve es tu christmas gift, pero te seguire haciendo los features despues, ojala utilices cabron, te quiere mucho Fa.</p>
 
     </main>
-    
+
     <footer>
 
     </footer>
