--- a/index.html
+++ b/index.html
@@ -3,36 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Ana's Website</title>
 </head>
 
 <body>
     <header>
-        <h1>Anahi's Website</h1>
+        <h2>Anahi's Website</h2>
     </header>
 
     <main>
-        <section>
+        <section class="wrapper">
+        <nav>
             <ul>
-                <li><a href="tracker.html">Personal Tracker</a></li>
-                <li><a href="Album.html">Photo Album</a></li>
-                <li><a href="ChristmasGift.html">Gift</a></li>
+                <li class="wrap"><a href="tracker.html">Personal Tracker</a></li>
+                <li class="wrap"><a href="Album.html">Photo Album</a></li>
+                <li class="wrap"><a href="ChristmasGift.html">Christmas Gift</a></li>
             </ul>
+        </nav>
+
+        <p>Hola Anita ahorita, te cree esto porque te quiero, y para practicar mis cositas aqui jeje. Hasta ahora lo que sirve es tu christmas gift, pero te seguire haciendo los features despues, ojala utilices cabron, te quiere mucho Fa. Recuerda que soy programador, y tampoco se va a ver hermoso</p>
+
+        
         </section>
-
-        <p>Hola Anita ahorita, te cree esto porque te quiero, y para practicar mis cositas aqui jeje. Hasta ahora lo que sirve es tu christmas gift, pero te seguire haciendo los features despues, ojala utilices cabron, te quiere mucho Fa.</p>
-
     </main>
 
     <footer>
 
     </footer>
 </body>
-
-
-
-
-
-
 <script src="js/app.js"></script>
 </html>
