--- a/index.html
+++ b/index.html
@@ -8,29 +8,31 @@
 </head>
 
 <body>
-    <header>
-        <h1>Anahi's Website</h1>
+    <header class="site-header">
+        <nav class="nav-wrapper">
+
+            <div class="nav-left">
+                <a href="#" class="">Ana's &copy;</a>
+                <p id="date"></p>
+            </div>
+
+            <div class="nav-right">
+                <button class="btn-black/white">(Optional Dark version)</button>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Te quiero</a></li>
+            </div>
+        </nav>
     </header>
 
     <main>
-        <section class="wrapper">
-        <nav>
-            <ul>
-                <li class="wrap"><a href="tracker.html">Personal Tracker</a></li>
-                <li class="wrap"><a href="Album.html">Photo Album</a></li>
-                <li class="wrap"><a href="ChristmasGift.html">Christmas Gift</a></li>
-            </ul>
-        </nav>
-
-        <p>Hola Anita ahorita, te cree esto porque te quiero, y para practicar mis cositas aqui jeje. Hasta ahora lo que sirve es tu christmas gift, pero te seguire haciendo los features despues, ojala utilices cabron, te quiere mucho Fa. Recuerda que soy programador, y tampoco se va a ver hermoso</p>
-
+        <h1 class="main-title">Ana's &copy;</h1>
+        <p class="subtitle">Ana this is your website, I hope you enjoy it.</p>
         
-        </section>
     </main>
 
-    <footer>
 
-    </footer>
+
+
 </body>
 <script src="js/app.js"></script>
 </html>
