--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
 
 <body>
     <header class="site-header">
-        <nav class="nav-wrapper">
+        <nav>
 
             <div class="nav-left">
-                <a href="#" class="">Ana's &copy;</a>
-                <p id="date"></p>
+                <ul>
+                    <li><a href="#" class="">Ana's &copy;</a></li>
+                    <li><p id="date"></p></li>
+                </ul>
             </div>
 
             <div class="nav-right">
-                <button class="btn-black/white">(Optional Dark version)</button>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Te quiero</a></li>
+                <button class="btn-black">(Optional Dark version)</button>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Te quiero</a></li>
+                </ul>
             </div>
         </nav>
     </header>
@@ -27,7 +31,14 @@
     <main>
         <h1 class="main-title">Ana's &copy;</h1>
         <p class="subtitle">Ana this is your website, I hope you enjoy it.</p>
-        
+
+        <section class="main-photo">
+            <img src="assets/foto2.jpeg" alt="Photo of Anita,Fa y Boli"> 
+        </section>
+
+        <p> /About you</p>
+        <p> Anita espero que estes muy bien, ando practicando codigo en web, y no se me ocurrio otra persona para hacerle un sitio, espero que tengas una bonita navidad y ano nuevo.Tranquila te voy a hacer mas cositas lindas despues, nada mejor que practicar con cosas que me inspiren como tu. Te quiere, Fa.</p>
+
     </main>
 
 
