--- a/index.html
+++ b/index.html
@@ -8,25 +8,7 @@
 </head>
 
 <body>
-    <header class="site-header">
-        <nav>
-
-            <div class="nav-left">
-                <ul>
-                    <li><a href="#" class="">Ana's &copy;</a></li>
-                    <li><p id="date"></p></li>
-                </ul>
-            </div>
-
-            <div class="nav-right">
-                <button class="btn-black">(Optional Dark version)</button>
-                <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Te quiero</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+    <site-nav brand="Ana's" about-href="about" love-href="#love"></site-nav>
 
     <main>
         <h1 class="main-title">Ana's &copy;</h1>
@@ -37,7 +19,7 @@
         </section>
 
         <p> /About you</p>
-        <p> Anita espero que estes muy bien, ando practicando codigo en web, y no se me ocurrio otra persona para hacerle un sitio, espero que tengas una bonita navidad y ano nuevo.Tranquila te voy a hacer mas cositas lindas despues, nada mejor que practicar con cosas que me inspiren como tu. Te quiere, Fa.</p>
+        <p> Anita espero que estes muy bien, ando practicando codigo en web, y no se me ocurrio otra persona para hacerle un sitio, espero que tengas una bonita navidad y ano nuevo. Tranquila te voy a hacer mas cositas lindas despues, no hay nada mejor que practicar codigo cuando es sobre algo que te inspira. Te quiere, Fa.</p>
 
     </main>
 
@@ -45,5 +27,5 @@
 
 
 </body>
-<script src="js/app.js"></script>
+<script type="module" src="js/site-nav.js"></script>
 </html>
