changes for css,html and js

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <site-nav brand="Ana's" about-href="about" love-href="#love"></site-nav>
 
     <main>
-        <h1 class="main-title">Ana's &copy;</h1>
-        <p class="subtitle">Ana this is your website, I hope you enjoy it.</p>
+        <h1 class="main-title">Ana's®</h1>
+        <p class="subtitle">Ana este es tu sitio-web, espero lo disfrutes,
+                            <br> por parte de Fa para la mejor hermana del mundo.
+        </p>
 
         <section class="main-photo">
             <img src="assets/foto2.jpeg" alt="Photo of Anita,Fa y Boli"> 
