Changes into index html

--- a/index.html
+++ b/index.html
@@ -4,25 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="assets/foto9.jpeg" type="image/png">
     <title>Ana's Website</title>
 </head>
 
 <body>
     <site-nav brand="Ana's" about-href="about" love-href="#love"></site-nav>
 
-    <main>
-        <h1 class="main-title">Ana's®</h1>
-        <p class="subtitle">Ana este es tu sitio-web, espero lo disfrutes,
-                            <br> por parte de Fa para la mejor hermana del mundo.
-        </p>
-
-        <section class="main-photo">
-            <img src="assets/foto2.jpeg" alt="Photo of Anita,Fa y Boli"> 
-        </section>
-
-        <p> /About you</p>
-        <p> Anita espero que estes muy bien, ando practicando codigo en web, y no se me ocurrio otra persona para hacerle un sitio, espero que tengas una bonita navidad y ano nuevo. Tranquila te voy a hacer mas cositas lindas despues, no hay nada mejor que practicar codigo cuando es sobre algo que te inspira. Te quiere, Fa.</p>
-
+    <main class="main-page">
+        
     </main>
 
 
